testsuite/gnatprove/tests/QC05-006__machine_rounding/test.out
test.adb:3:17: error: attribute "Machine_Rounding" is not allowed in SPARK
test.adb:3:17: error: violation of pragma SPARK_Mode at test.adc:1
gnatprove: error during flow analysis and proof
